# mileboard

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1.1-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
src/: App.module.css  App.test.tsx  App.tsx  global.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/backlog/: client.rs  commands.rs  error.rs  mod.rs  types.rs
src/services/: backlogApi.test.ts  backlogApi.ts  groupStorage.test.ts  groupStorage.ts  reorderStorage.test.ts  reorderStorage.ts  settingsStorage.test.ts  settingsStorage.ts  snapshotFile.test.ts  snapshotFile.ts  sortStorage.test.ts  sortStorage.ts  tauriBridge.test.ts  tauriBridge.ts
src/stores/: boardStore.test.ts  boardStore.ts  filterStore.test.ts  filterStore.ts  groupStore.test.ts  groupStore.ts  reorderStore.test.ts  reorderStore.ts  settingsStore.test.ts  settingsStore.ts  sortStore.test.ts  sortStore.ts  uiModeStore.test.ts  uiModeStore.ts
src/types/: sort.ts  (+6 more)
tests/: setup.ts
(+194 files in other folders)
